# twitch-channel-points-obs-integration

./: Cargo.toml  config.json
src/: main.rs
