[package]
name = "twitch-channel-points-obs-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
futures-util = "0.3.21"
obws = "0.9.1"
reqwest = "0.11.11"
serde = "1.0.140"
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
twitch_api2 = { version = "0.6.1", features = ["twitch_oauth2", "client", "helix", "reqwest", "pubsub"] }
